@@ -33,7 +33,7 @@ import java.io.InputStream;
 import java.lang.module.ModuleReader;
 import java.lang.module.ModuleReference;
 import java.lang.module.ResolvedModule;
-import java.net.URLClassLoader;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayDeque;
@@ -67,21 +67,13 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
 
     private final NativeImageClassLoaderSupport classLoaderSupport;
 
-    private final ClassLoader imageClassLoader;
-    private final URLClassLoader classPathClassLoader;
+    private final NativeImageClassLoader imageClassLoader;
 
     private final Map<String, Set<Module>> packageToModules;
 
     public ClassLoaderSupportImpl(NativeImageClassLoaderSupport classLoaderSupport) {
         this.classLoaderSupport = classLoaderSupport;
         imageClassLoader = classLoaderSupport.getClassLoader();
-        /*
-         * Only if imageClassLoader is not the URLClassLoader we need to also remember its parent as
-         * classPathClassLoader (for use in isNativeImageClassLoaderImpl). Otherwise, there is only
-         * the URLClassLoader (already stored in imageClassLoader, extra classPathClassLoader field
-         * can be set to null).
-         */
-        classPathClassLoader = imageClassLoader instanceof URLClassLoader ? null : (URLClassLoader) imageClassLoader.getParent();
         packageToModules = new HashMap<>();
         buildPackageToModulesMap(classLoaderSupport);
     }
@@ -89,9 +81,6 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
     @Override
     protected boolean isNativeImageClassLoaderImpl(ClassLoader loader) {
         if (loader == imageClassLoader) {
-            return true;
-        }
-        if (classPathClassLoader != null && loader == classPathClassLoader) {
             return true;
         }
         if (loader instanceof NativeImageSystemClassLoader) {
@@ -122,11 +111,12 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
 
         /* Collect remaining resources from classpath */
         for (Path classpathFile : classLoaderSupport.classpath()) {
+            boolean includeAll = classLoaderSupport.getJavaPathsToInclude().contains(classpathFile);
             try {
                 if (Files.isDirectory(classpathFile)) {
-                    scanDirectory(classpathFile, resourceCollector);
+                    scanDirectory(classpathFile, resourceCollector, includeAll);
                 } else if (ClasspathUtils.isJar(classpathFile)) {
-                    scanJar(classpathFile, resourceCollector);
+                    scanJar(classpathFile, resourceCollector, includeAll);
                 }
             } catch (IOException ex) {
                 throw UserError.abort("Unable to handle classpath element '%s'. Make sure that all classpath entries are either directories or valid jar files.", classpathFile);
@@ -134,20 +124,29 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
         }
     }
 
-    private static void collectResourceFromModule(ResourceCollector resourceCollector, ResourceLookupInfo info) {
+    private void collectResourceFromModule(ResourceCollector resourceCollector, ResourceLookupInfo info) {
         ModuleReference moduleReference = info.resolvedModule.reference();
         try (ModuleReader moduleReader = moduleReference.open()) {
+            var includeAll = classLoaderSupport.getJavaModuleNamesToInclude().contains(info.resolvedModule().name());
             List<String> foundResources = moduleReader.list()
-                            .filter(resourceName -> resourceCollector.isIncluded(info.module, resourceName, moduleReference.location().orElse(null)))
-                            .collect(Collectors.toList());
+                            .filter(resourceName -> shouldIncludeEntry(info.module(), resourceCollector, resourceName, moduleReference.location().orElse(null), includeAll))
+                            .toList();
 
             for (String resName : foundResources) {
+                if (resName.endsWith("/")) {
+                    resourceCollector.addDirectoryResource(info.module, resName, "", false);
+                    continue;
+                }
                 Optional<InputStream> content = moduleReader.open(resName);
                 if (content.isEmpty()) {
+                    /* This is to be resilient, but the resources returned by list() should exist */
+                    resourceCollector.registerNegativeQuery(info.module, resName);
                     continue;
                 }
                 try (InputStream is = content.get()) {
                     resourceCollector.addResource(info.module, resName, is, false);
+                } catch (IOException resourceException) {
+                    resourceCollector.registerIOException(info.module, resName, resourceException, LinkAtBuildTimeSupport.singleton().moduleLinkAtBuildTime(info.module.getName()));
                 }
             }
         } catch (IOException e) {
@@ -155,7 +154,7 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
         }
     }
 
-    private static void scanDirectory(Path root, ResourceCollector collector) throws IOException {
+    private static void scanDirectory(Path root, ResourceCollector collector, boolean includeAll) {
         Map<String, List<String>> matchedDirectoryResources = new HashMap<>();
         Set<String> allEntries = new HashSet<>();
 
@@ -174,7 +173,7 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
             }
 
             if (Files.isDirectory(entry)) {
-                if (collector.isIncluded(null, relativeFilePath, Path.of(relativeFilePath).toUri())) {
+                if (shouldIncludeEntry(null, collector, relativeFilePath, Path.of(relativeFilePath).toUri(), includeAll)) {
                     matchedDirectoryResources.put(relativeFilePath, new ArrayList<>());
                 }
                 try (Stream<Path> pathStream = Files.list(entry)) {
@@ -183,11 +182,15 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
                         filtered = filtered.filter(Predicate.not(ClassUtil.CLASS_MODULE_PATH_EXCLUDE_DIRECTORIES::contains));
                     }
                     filtered.forEach(queue::push);
+                } catch (IOException resourceException) {
+                    collector.registerIOException(null, relativeFilePath, resourceException, LinkAtBuildTimeSupport.singleton().packageOrClassAtBuildTime(relativeFilePath));
                 }
             } else {
-                if (collector.isIncluded(null, relativeFilePath, Path.of(relativeFilePath).toUri())) {
+                if (shouldIncludeEntry(null, collector, relativeFilePath, Path.of(relativeFilePath).toUri(), includeAll)) {
                     try (InputStream is = Files.newInputStream(entry)) {
                         collector.addResource(null, relativeFilePath, is, false);
+                    } catch (IOException resourceException) {
+                        collector.registerIOException(null, relativeFilePath, resourceException, LinkAtBuildTimeSupport.singleton().packageOrClassAtBuildTime(relativeFilePath));
                     }
                 }
             }
@@ -199,6 +202,8 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
             List<String> dirContent = matchedDirectoryResources.get(key);
             if (dirContent != null && !dirContent.contains(entry)) {
                 dirContent.add(entry.substring(last + 1));
+            } else if (dirContent == null) {
+                collector.registerNegativeQuery(null, key);
             }
         }
 
@@ -208,26 +213,34 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
         });
     }
 
-    private static void scanJar(Path jarPath, ResourceCollector collector) throws IOException {
+    private static void scanJar(Path jarPath, ResourceCollector collector, boolean includeAll) throws IOException {
         try (JarFile jf = new JarFile(jarPath.toFile())) {
             Enumeration<JarEntry> entries = jf.entries();
             while (entries.hasMoreElements()) {
                 JarEntry entry = entries.nextElement();
+                URI uri = jarPath.toUri();
                 if (entry.isDirectory()) {
                     String dirName = entry.getName().substring(0, entry.getName().length() - 1);
-                    if (collector.isIncluded(null, dirName, jarPath.toUri())) {
+                    if (shouldIncludeEntry(null, collector, dirName, uri, includeAll)) {
                         // Register the directory with empty content to preserve Java behavior
                         collector.addDirectoryResource(null, dirName, "", true);
                     }
                 } else {
-                    if (collector.isIncluded(null, entry.getName(), jarPath.toUri())) {
+                    if (shouldIncludeEntry(null, collector, entry.getName(), uri, includeAll)) {
                         try (InputStream is = jf.getInputStream(entry)) {
                             collector.addResource(null, entry.getName(), is, true);
+                        } catch (IOException resourceException) {
+                            collector.registerIOException(null, entry.getName(), resourceException, LinkAtBuildTimeSupport.singleton().packageOrClassAtBuildTime(entry.getName()));
                         }
                     }
                 }
             }
         }
+    }
+
+    private static boolean shouldIncludeEntry(Module module, ResourceCollector collector, String fileName, URI uri, boolean includeAll) {
+        var isIncluded = collector.isIncluded(module, fileName, uri);
+        return isIncluded || (includeAll && !(fileName.endsWith(".class") || fileName.endsWith(".jar")));
     }
 
     @Override
